Mon Jul 22 10:09:46 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_slot_sweep): need to add empty RVALUE as freeobj.

Mon Jul 22 09:48:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): use the given file name unless
	  eval even if scope is given.  additional fix for [Bug #8436].
	  based on the patch by srawlins at [ruby-core:56099] [Bug #8662].

Mon Jul 22 09:24:19 2013  Kouji Takao  <kouji@takao7.net>

	* ext/readline/readline.c (Init_readline): added
	  Readline.delete_text. [ruby-dev:45789] [Feature #6626]
	* ext/readline/extconf.rb: check for rl_delete_text() in Readline library.

	  Thanks, Nobuyoshi Nakada, for the patch.

Mon Jul 22 03:15:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_parse.c (rfc2822_cb): check if wday is given, since it
	  can be omitted.

Mon Jul 22 00:15:20 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_sq_fast): Refine expressions.

Sun Jul 21 21:08:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Use simple multiplication if yl is small.
	  (rb_cstr_to_inum): Invoke bigsq instead of bigmul0.
	  (bigsq): Re-implemented.
	  (bigmul0): Invoke bigsq if two arguments are identical.

Sun Jul 21 09:58:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_toom3): New function based on bigmul1_toom3.
	  (bary_mul_toom3_branch): Call bary_mul_toom3.
	  (rb_big_mul_toom3): Ditto.
	  (bigmul1_toom3): Removed.
	  (big_real_len): Ditto.
	  (big_split): Ditto.
	  (big_split3): Ditto.

Sun Jul 21 08:12:16 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* proc.c (proc_to_s): use PRIsVALUE to preserve the result encoding.

Sun Jul 21 03:36:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* hash.c (rb_hash_flatten): use NUM2INT to raise TypeError on 32bit
	  platform. it's introduced by r42039

Sun Jul 21 01:07:45 2013  Benoit Daloze  <eregontp@gmail.com>

	* common.mk (help): Fix environment variable name and argument.