@@ -1,3 +1,14 @@
+Mon Jul 22 12:58:18 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* array.c (ary_memfill): added.
+
+	* array.c (rb_ary_initialize): use ary_memfill().
+
+	* array.c (rb_ary_fill): ditto.
+
+	* array.c (rb_ary_slice_bang): use RARRAY_RAWPTR() because
+	  this code creates no new references.
+
 Mon Jul 22 10:09:46 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (gc_slot_sweep): need to add empty RVALUE as freeobj.
